# AnisetteProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NOTE.md  README.md  vcpkg.json  version.h.in
.github/: build-x64-windows.yml
.github/workflows/: build-release.yml  build-x64-release.yml  build-x64-windows.yml  build-x64.yml
draft/: gl_shader.h  logging.cpp  precompile.cpp
scripts/: beatmap.schema.json  osu_parser.py
shaders/: parallax.frag  parallax.vert
src/: CMakeLists.txt  main.cpp  version.h.in
src/components/: background.h  container.h  frametime_overlay.h  hbox.h  item.h  stage_channel.h  text_button.cpp  vbox.h
src/core/: CMakeLists.txt  _internal.h  abs.h  audio.cpp  background.h  base.cpp  config.cpp  config.h  config_loader.cpp  core.cpp  core.h  event.cpp  frame.cpp  frametime_overlay.h  internal.h  loader.cpp  renderer.cpp  renderer.h  scene.h  static.h  video.cpp
src/data/: CMakeLists.txt  beatmap.cpp  beatmap.h  data.h  loader.cpp  manifest_parser.cpp
src/events/: CMakeLists.txt  events.h
src/include/: core.h  discord.h  discord_rpc.h  logging.h  version.h
src/screens/: CMakeLists.txt  basic_screen_impl.cpp  library.cpp  main_menu.cpp  menu.cpp  menu.h  register.h  scene_register.h  screen.h  screen_impl.h  screens.h  settings.cpp  settings.h  splash.cpp  splash.h  stage.cpp  test.cpp
src/temp/: config.cpp  config.h
src/utils/: CMakeLists.txt  common.h  config.cpp  config.h  discord.cpp  discord.h  discord_rpc.cpp  gl_utils.cpp  gl_utils.h  logging.cpp  logging.h  threaded_loader.cpp
src/utils/discord/: discord.cpp  discord.h
src/utils/logging/: logging.cpp  logging.h
tests/: CMakeLists.txt  test.cpp
